<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="bottom"
        android:paddingBottom="10dp"
        android:paddingEnd="@dimen/dialog_content_padding"
        android:paddingStart="@dimen/dialog_content_padding"
        android:text="@string/dialog_device_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <FrameLayout
        android:id="@+id/progress_outer"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/colorPrimary">
        <View
            android:id="@+id/progress_inner"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />
    </FrameLayout>

    <ListView
        android:id="@+id/list_devices"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_device_list_min_height"
        android:minHeight="@dimen/dialog_device_list_min_height" />

    <LinearLayout
        android:id="@+id/empty_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_device_list_min_height"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_device_searching" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:id="@+id/btn_negative"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_negative" />

        <Button
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:textColor="@color/dialog_btn_color"
            android:enabled="false"
            android:id="@+id/btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_positive" />

    </LinearLayout>

</LinearLayout>