<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/btn_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="6dp"
        android:paddingEnd="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="40dp"
        android:paddingStart="20dp"
        android:paddingTop="6dp"
        android:text="@string/btn_setting" />

    <TextView
        android:id="@+id/btn_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_setting"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="6dp"
        android:paddingEnd="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="40dp"
        android:paddingStart="20dp"
        android:paddingTop="6dp"
        android:text="@string/btn_device" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <View
                android:layout_width="8dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_rectangle" />

            <View
                android:layout_width="8dp"
                android:layout_height="40dp"
                android:layout_marginLeft="80dp"
                android:layout_marginStart="80dp"
                android:background="@drawable/shape_rectangle" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:background="@drawable/bg_dashboard"
            android:padding="@dimen/dashboard_stroke_width">

            <TextView
                android:id="@+id/tv_log1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/state_not_connect"
                android:textColor="#A349A8"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_log2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/tv_log1"
                android:layout_alignLeft="@id/tv_log1"
                android:layout_alignStart="@id/tv_log1"
                android:layout_marginBottom="5dp"
                android:alpha="0.5"
                android:textColor="#7F7F7F"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </RelativeLayout>

    </LinearLayout>

    <com.mmmmar.helmsman.ControlView
        android:id="@+id/ctl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        app:direction="left"
        app:sectorColor="@color/colorPrimary"
        app:sectorLightColor="@color/colorPrimaryDark" />

    <com.mmmmar.helmsman.ControlView
        android:id="@+id/ctl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:direction="right"
        app:sectorColor="@color/colorPrimary"
        app:sectorLightColor="@color/colorPrimaryDark" />

</RelativeLayout>